<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/satellite_route"
        android:orderInCategory="0"
        app:showAsAction="always"
        android:icon="@drawable/satellite_icon2"
        android:title="@string/satLabel" />

    <item
        android:id="@+id/route_toggle"
        android:orderInCategory="10"
        app:showAsAction="always"
        android:icon="@drawable/route_icon"
        android:title="@string/route_toggle_label" />

    <item
        android:id="@+id/eat_toggle"
        android:orderInCategory="20"
        app:showAsAction="always"
        android:icon="@drawable/knifefork_small"
        android:title="@string/eat_toggle_label" />

    <item
        android:id="@+id/hc_toggle"
        android:orderInCategory="30"
        app:showAsAction="always"
        android:icon="@drawable/accessibility"
        android:title="@string/hc_toggle_label" />

    <item
        android:id="@+id/route_action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>