<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingTop="0dp"
        tools:context=".MainActivity" >

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar2"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:elevation="10dp"
            android:minHeight="?attr/actionBarSize"
            android:background="@color/barColor" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/geocode_input"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:hint="@string/place_name"
                android:inputType="text"
                android:lines="1" />

            <Button
                android:id="@+id/geocode_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goLabel" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal"
            android:padding="0sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <EditText
                android:id="@+id/lat_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:layout_weight="0.35"
                android:hint="@string/lat_deg"
                android:inputType="numberDecimal|numberSigned"
                android:lines="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp" />

            <EditText
                android:id="@+id/lon_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:layout_weight="0.35"
                android:hint="@string/lon_deg"
                android:inputType="numberDecimal|numberSigned"
                android:lines="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp" />

            <Button
                android:id="@+id/latlong_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:layout_weight="0.25"
                android:text="@string/goLabel"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/button_horizontal_margin"
            android:paddingRight="@dimen/button_horizontal_margin"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/honolulu_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10sp"
                android:text="@string/markerLabel" />

            <Button
                android:id="@+id/indoor_map_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10sp"
                android:text="@string/indoorLabel" />

            <Button
                android:id="@+id/route_map_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10sp"
                android:text="@string/routeLabel" />

            <Button
                android:id="@+id/mapme_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10sp"
                android:text="@string/mapme_label" />

            <Button
                android:id="@+id/default_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10sp"
                android:text="@string/default_label" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>
